--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,50 @@
 /* You can add global styles to this file, and also import other style files */
+@use '@angular/material' as mat;
+
+@include mat.core();
+
+$my-primary: mat.define-palette(mat.$indigo-palette, 500);
+$my-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+$my-theme: mat.define-light-theme((
+ color: (
+   primary: $my-primary,
+   accent: $my-accent,
+ ),
+ typography: mat.define-typography-config(),
+ density: 0,
+));
+
+@include mat.all-component-themes($my-theme);
+
+body {
+    margin: 0;
+}
+
+.container {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+} 
+@media screen and (min-width: 576px) {
+  .container {
+      width: 540px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+      width: 720px;
+  }
+}
+@media screen and (min-width: 992px) {
+  .container {
+      width: 960px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+      width: 1140px;
+  }
+}
