--- a/src/app/components/questions/text-question/text-question.component.scss
+++ b/src/app/components/questions/text-question/text-question.component.scss
@@ -1,1 +1,12 @@
-mat-form-field { width: 100%;}
+mat-form-field { 
+    width: 100%;
+    margin-bottom: 3em;
+}
+
+.question-caput {
+    margin: 1em 0;
+}
+
+.pergunta{
+    font-weight: 500;
+}
