--- a/src/app/pages/answer-briefing/answer-briefing.component.scss
+++ b/src/app/pages/answer-briefing/answer-briefing.component.scss
@@ -1,5 +1,15 @@
 .spinner-container {
     display: block;
-    margin: 0 auto;
+    margin: 1em auto;
     width: fit-content;
+}
+
+.briefing-card{
+    margin: 2em 0 4em 0;
+}
+
+.button-container {
+    display: flex;
+    justify-content: end;
+    margin-bottom: 5em;
 }
