incluir tela do projeto

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <header>
     <mat-toolbar color="primary">
+        <img src="/assets/logo.svg" alt="logo" class="logo">
         <h1>Prancheta</h1>
       </mat-toolbar>
 </header>
